# IdleFramework

./: .coverage  .gitignore  IDLE_GAME_MECHANICS_RESEARCH.md  Makefile  pyproject.toml
.github/workflows/: ci.yml
.hypothesis/constants/: 05fa52815c2dce80  0c03446ab991eb5f  127b90e2f0adae43  15eb991d0ff9c23b  18f3ab46f3918701  358a1ea4014f5d3b  359d02a34d13763d  3fcb18f549797787  430478e9ab5fea34  4b9eec8504df6b5d  50397b31ea110cec  5204b8bbeb412fd3  6da8630deca7e757  6e07c7d701438d97  704b6470f412ac26  72038fe1154c905d  73e4e24256a129df  766c5e8adf84257d  7815b6ff5b8a6546  7fc8288e003d5b06  85f149168b6a977d  940663f7541d97be  9b3c92f666d12760  9d3050c77b13a13e  9f9c4ff6bcada582  a90e61f566d59611  b81e925d2da6820e  bbb0aaae48514e7e  c79ae08a4feca980  cf91c73e5d40e655  df9ddba2355d5173  eb37f1d7c6683cae
benchmarks/: run_benchmarks.py
docs/benchmarks/: baseline-2026-03-13.json  baseline-2026-03-15.json
docs/plans/: 2026-03-07-idleframework-design.md  2026-03-09-branch-integration.md  (+10 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
server/: __init__.py  app.py  config.py  game_store.py  schemas.py  sessions.py
tests/: conftest.py  simulator.py  test_analysis.py  test_beam.py  test_bigfloat.py  test_bigfloat_props.py  test_cli.py  test_dsl.py  test_e2e_fixtures_validate.py  test_e2e_minicap.py  test_engine_autobuyers.py  test_engine_buffs.py  test_engine_capacity.py  test_engine_crit.py  test_engine_drains.py  test_engine_formulas.py  test_engine_prestige.py  test_engine_synergy.py  test_engine_tickspeed.py  test_engine_upgrades.py  test_engine_variables.py  test_fullmechanics.py  test_graph.py  test_greedy.py  test_mcts_bnb.py  test_mechanics_props.py  test_model.py  test_numba_accel.py  test_reports.py  test_segments.py  test_simulator.py  test_solvers.py  test_stacking.py  test_state_edges.py
(+157 files in other folders)
