[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idleframework"
version = "0.1.0"
description = "Math-first framework for analyzing idle/incremental game balance"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "lark>=1.1",
    "networkx>=3.0",
    "scipy>=1.11",
    "plotly>=5.0",
    "typer>=0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "mpmath>=1.3",
    "sympy>=1.12",
    "pytest-benchmark>=4.0",
]
dev = ["idleframework[test]", "ruff"]

[project.scripts]
idleframework = "idleframework.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/idleframework"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
