[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idleframework"
version = "0.1.0"
description = "Math-first framework for analyzing idle/incremental game balance"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "pydantic>=2.0",
    "lark>=1.1",
    "networkx>=3.0",
    "scipy>=1.11",
    "plotly>=5.0",
    "typer>=0.9",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.0",
]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.0",
    "mpmath>=1.3",
    "sympy>=1.12",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "httpx>=0.28",
    "pytest-timeout>=2.0",
    "idleframework[server]",
]

[project.scripts]
idleframework = "idleframework.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/idleframework"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
